<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Puzzle_intro">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/tileSize"
            android:layout_height="@dimen/tileSize"
            android:text="@string/one"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="78dp"
            android:layout_height="@dimen/tileSize"
            android:text="@string/two"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/tileSize"
            android:layout_height="@dimen/tileSize"
            android:text="@string/three"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/tileSize"
            android:layout_height="@dimen/tileSize"
            android:text="@string/four"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/tileSize"
            android:layout_height="@dimen/tileSize"
            android:text="@string/five"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/tileSize"
            android:layout_height="@dimen/tileSize"
            android:text="@string/six"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/tileSize"
            android:layout_height="@dimen/tileSize"
            android:text="@string/seven"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/tileSize"
            android:layout_height="@dimen/tileSize"
            android:text="@string/eight"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="1" />
    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/puzzle_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/puzzle_Welcome"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/puzzle_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_welcome_text" />

    <Button
        android:id="@+id/puzzle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="begin"
        android:text="@string/begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</android.support.constraint.ConstraintLayout>